require('../../shared/__test__/testBootstrap');

const fs = require('fs');
const nodeRequest = require('request-promise-native');
const request = require('supertest');
const sinon = require('sinon');
const _ = require('lodash');

const { validator } = require('../../shared/openapi');
const imagesService = require('../../shared/services/images');
const {
  TEST_EVENT_1,
  TEST_EVENT_2,
  generateMongoFixture,
  TEST_FACEBOOK_EVENT_1,
  TEST_VENUE_1,
} = require('../../shared/__test__/fixtures');
const { clearDb } = require('../../shared/__test__/testUtils');
const eventRepository = require('./eventRepository');
const venueRepository = require('../venues/venueRepository');

const EVENT_SNAPSHOT_MATCHER = {
  id: expect.any(String),
  createdAt: expect.any(String),
  updatedAt: expect.any(String),
};

const sandbox = sinon.createSandbox();

describe('events e2e', () => {
  beforeEach(async () => {
    sandbox.restore();
    await clearDb();
  });

  describe('GET /events', () => {
    const validateResponse = validator.validateResponse('get', '/events');

    it('happy path', async () => {
      await eventRepository.createEvent(TEST_EVENT_1);

      const res = await request(global.app).get('/events');

      expect(res.status).toEqual(200);
      expect(res.body.results[0]).toMatchInlineSnapshot(
        `
Object {
  "dates": Array [
    Object {
      "from": "2020-01-10T23:00:00.000Z",
      "to": "2019-10-11T22:00:00.000Z",
    },
  ],
  "id": "5cab012f2830a46462316889",
  "location": Object {
    "address1": "Vechtplantsoen 56",
    "address2": "1",
    "city": "Utrecht",
    "coordinates": Object {
      "latitude": 52.118273,
      "longitude": 5.085487,
    },
    "country": "NL",
    "postalCode": "3554TG",
    "type": "address",
  },
  "title": "Bevrijdingsfestival",
}
`,
        EVENT_SNAPSHOT_MATCHER
      );
      expect(validateResponse(res)).toBeUndefined();
    });

    it('should limit the amount of results to the limit parameter', async () => {
      const event1 = await eventRepository.createEvent(TEST_EVENT_1);
      await eventRepository.createEvent(TEST_EVENT_2);

      const res = await request(global.app)
        .get('/events')
        .query({
          limit: 1,
        });

      expect(res.status).toEqual(200);
      expect(res.body.results.length).toEqual(1);
      expect(res.body.limit).toEqual(1);
      expect(res.body.results[0].id).toEqual(event1._id.toString());
      expect(validateResponse(res)).toBeUndefined();
    });

    it('should return only fields set in the fields parameter', async () => {
      await eventRepository.createEvent(TEST_EVENT_1);

      const res = await request(global.app)
        .get('/events')
        .query({
          fields: ['title'],
        });

      expect(res.status).toEqual(200);
      expect(res.body.results[0]).toMatchObject(
        _.pick(TEST_EVENT_1, ['id', 'title'])
      );
      expect(validateResponse(res)).toBeUndefined();
    });

    it('should filter results on name based on query parameter', async () => {
      await eventRepository.createEvent({
        ...TEST_EVENT_1,
        queryText: 'tobefiltered',
      });
      await eventRepository.createEvent(TEST_EVENT_2);

      const res = await request(global.app)
        .get('/events')
        .query({
          query: 'tobefiltered',
        });

      expect(res.status).toEqual(200);
      expect(res.body.results.length).toBe(1);
      expect(res.body.results[0].name).toBe(TEST_EVENT_1.name);
      expect(validateResponse(res)).toBeUndefined();
    });

    it('return a totalCount with each result', async () => {
      await eventRepository.createEvent(TEST_EVENT_1);
      await eventRepository.createEvent(TEST_EVENT_2);

      sandbox
        .stub(eventRepository, 'getEvents')
        .resolves([await eventRepository.getEvent(TEST_EVENT_1._id)]);

      const res = await request(global.app).get('/events');

      expect(res.status).toEqual(200);
      expect(res.body.results.length).toBe(1);
      expect(res.body.totalCount).toBe(2);
      expect(validateResponse(res)).toBeUndefined();
    });

    it('should handle special characters in search queries', async () => {
      await eventRepository.createEvent({
        ...TEST_EVENT_1,
        queryText: 'cafe',
      });
      await eventRepository.createEvent(TEST_EVENT_2);

      const res = await request(global.app)
        .get('/events')
        .query({
          query: 'café',
        });

      expect(res.status).toEqual(200);
      expect(res.body.results.length).toBe(1);
      expect(res.body.results[0].name).toBe(TEST_EVENT_1.name);
      expect(validateResponse(res)).toBeUndefined();
    });

    it('city filter', async () => {
      await eventRepository.createEvent({
        ...TEST_EVENT_1,
        location: {
          ...TEST_EVENT_1.location,
          city: 'Amsterdam',
        },
      });
      await eventRepository.createEvent({
        ...TEST_EVENT_2,
        location: {
          ...TEST_EVENT_2.location,
          city: 'Utrecht',
        },
      });

      const res = await request(global.app)
        .get('/events')
        .query({
          filter: {
            country: 'NL',
            city: 'Amsterdam',
          },
        });

      expect(res.status).toEqual(200);
      expect(res.body.results.length).toBe(1);
      expect(res.body.results[0].name).toBe(TEST_EVENT_1.name);
      expect(validateResponse(res)).toBeUndefined();
    });

    it('country filter', async () => {
      await eventRepository.createEvent({
        ...TEST_EVENT_1,
        location: {
          ...TEST_EVENT_1.location,
          country: 'NL',
        },
      });
      await eventRepository.createEvent({
        ...TEST_EVENT_2,
        location: {
          ...TEST_EVENT_1.location,
          country: 'DE',
        },
      });

      const res = await request(global.app)
        .get('/events')
        .query({
          filter: {
            country: 'NL',
          },
        });

      expect(res.status).toEqual(200);
      expect(res.body.results.length).toBe(1);
      expect(res.body.results[0].name).toBe(TEST_EVENT_1.name);
      expect(validateResponse(res)).toBeUndefined();
    });

    it('dateFrom filter', async () => {
      const pastEvent = generateMongoFixture(TEST_EVENT_1, {
        dates: [
          {
            from: new Date(2018, 1, 1),
            to: new Date(2018, 1, 2),
          },
        ],
      });
      const futureEvent = generateMongoFixture(TEST_EVENT_1, {
        dates: [
          {
            from: new Date(2050, 1, 1),
            to: new Date(2050, 1, 2),
          },
        ],
      });
      const ongoingEvent = generateMongoFixture(TEST_EVENT_1, {
        dates: [
          {
            from: new Date(2017, 1, 1),
            to: new Date(2050, 1, 2),
          },
        ],
      });

      await eventRepository.createEvent(pastEvent);
      await eventRepository.createEvent(ongoingEvent);
      await eventRepository.createEvent(futureEvent);

      const res = await request(global.app)
        .get('/events')
        .query({
          filter: {
            dateFrom: new Date().toISOString(),
          },
        });

      expect(res.status).toEqual(200);
      expect(res.body.results.length).toBe(2);
      expect(res.body.results.map(event => event.id).sort()).toEqual(
        [futureEvent._id, ongoingEvent._id].sort()
      );
      expect(validateResponse(res)).toBeUndefined();
    });
  });

  describe('POST /events', () => {
    const validateResponse = validator.validateResponse('post', '/events');

    it('happy path', async () => {
      const res = await request(global.app)
        .post('/events')
        .send(eventRepository.deserialize(TEST_EVENT_1));
      const body = res.body;

      expect(res.status).toEqual(201);
      expect(body.name).toEqual(TEST_EVENT_1.name);
      expect(validateResponse(res)).toBeUndefined();
    });

    it('populates venue location data', async () => {
      const venue1 = await venueRepository.createVenue(TEST_VENUE_1);
      const eventData = _.set(
        { ...TEST_FACEBOOK_EVENT_1 },
        'organiser.venue',
        venue1._id.toString()
      );
      const res = await request(global.app)
        .post('/events')
        .send(eventRepository.deserialize(eventData));
      const body = res.body;

      expect(res.status).toEqual(201);
      expect(body.name).toEqual(TEST_EVENT_1.name);
      expect(body.location).toMatchSnapshot();
      expect(validateResponse(res)).toBeUndefined();
    });
  });

  describe('GET /events/:eventId', () => {
    const validateResponse = validator.validateResponse(
      'get',
      '/events/{eventId}'
    );

    it('happy path', async () => {
      const event1 = await eventRepository.createEvent(TEST_EVENT_1);

      const res = await request(global.app)
        .get(`/events/${event1._id}`)
        .send()
        .expect(200);

      expect(res.body).toMatchSnapshot(EVENT_SNAPSHOT_MATCHER);
      expect(validateResponse(res)).toBeUndefined();
    });

    it('simple fields', async () => {
      const event1 = await eventRepository.createEvent({
        ...TEST_EVENT_1,
        description: {
          en: 'Simple description',
        },
        location: {
          ...TEST_EVENT_1.location,
          address2: '1',
        },
      });

      const res = await request(global.app)
        .get(`/events/${event1._id}`)
        .send()
        .expect(200);

      expect(res.body).toMatchSnapshot(EVENT_SNAPSHOT_MATCHER);
      expect(validateResponse(res)).toBeUndefined();
    });

    it('facebook event fields', async () => {
      const venue1 = await venueRepository.createVenue(TEST_VENUE_1);
      const event1 = await eventRepository.createEvent({
        ..._.set(
          TEST_FACEBOOK_EVENT_1,
          'organiser.venue',
          venue1._id.toString()
        ),
        facebook: {
          ...TEST_FACEBOOK_EVENT_1.facebook,
          title: 'Title',
          description: 'Description',
          interestedCount: 1,
          goingCount: 100,
        },
      });

      const res = await request(global.app)
        .get(`/events/${event1._id}`)
        .send(event1)
        .expect(200);

      expect(res.body).toMatchSnapshot(EVENT_SNAPSHOT_MATCHER);
      expect(validateResponse(res)).toBeUndefined();
    });
  });

  describe('PUT /events/:eventId', () => {
    const validateResponse = validator.validateResponse(
      'put',
      '/events/{eventId}'
    );

    it('happy path', async () => {
      const event = await eventRepository.createEvent(TEST_EVENT_1);

      const res = await request(global.app)
        .put(`/events/${event._id}`)
        .send({
          ...eventRepository.deserialize(TEST_EVENT_1),
          title: 'Other title',
        });

      const updatedEvent = await eventRepository.getEvent(event._id);

      expect(res.status).toEqual(200);
      expect(res.body.title).toEqual('Other title');
      expect(updatedEvent.title).toEqual('Other title');
      expect(validateResponse(res)).toBeUndefined();
    });
  });

  describe('POST /events/:eventId/images', () => {
    const validateResponse = validator.validateResponse(
      'post',
      '/events/{eventId}/images'
    );
    const imagePath = 'src/shared/__test__/fixtures/images/square.jpg';

    it('happy path - multipart', async () => {
      const event = await eventRepository.createEvent(TEST_EVENT_1);

      sandbox.stub(imagesService, 'upload').resolves();
      sandbox.stub(imagesService, 'getServeableUrl').resolves('testurl');

      const res = await request(global.app)
        .post(`/events/${event.id}/images`)
        .attach('images', imagePath);

      expect(res.status).toEqual(200);
      expect(res.body.results[0].url).toEqual('testurl');
      expect(res.body.results[0].filesize).toEqual(1884);
      expect(res.body.results[0].filetype).toEqual('image/jpeg');
      expect(res.body.results[0].width).toEqual(400);
      expect(res.body.results[0].height).toEqual(400);
      expect(validateResponse(res)).toBeUndefined();
    });

    it('happy path - url', async () => {
      const event = await eventRepository.createEvent(TEST_EVENT_1);

      sandbox.stub(imagesService, 'upload').resolves();
      sandbox.stub(imagesService, 'getServeableUrl').resolves('testurl');
      sandbox.stub(nodeRequest, 'get').resolves({
        body: fs.readFileSync(imagePath),
        headers: {
          'content-type': 'image/jpeg',
        },
      });

      const res = await request(global.app)
        .post(`/events/${event.id}/images`)
        .send({
          images: [
            {
              url: 'http://testurl.com',
            },
          ],
        });

      expect(res.status).toEqual(200);
      expect(res.body.results[0].url).toEqual('testurl');
      expect(res.body.results[0].filesize).toEqual(1884);
      expect(res.body.results[0].filetype).toEqual('image/jpeg');
      expect(res.body.results[0].width).toEqual(400);
      expect(res.body.results[0].height).toEqual(400);
      expect(validateResponse(res)).toBeUndefined();
    });
  });
});
